fix navbar-header overflow

--- a/scss/manager.scss
+++ b/scss/manager.scss
@@ -73,6 +73,7 @@ nav {
     .navbar-header {
         width: 100%;
         float: none;
+        height: $nav-height;
     }
 
     .navbar-linode {
